--- a/SSuKSSuK-HUB/pom.xml
+++ b/SSuKSSuK-HUB/pom.xml
@@ -48,6 +48,10 @@
         </dependencies>
     </dependencyManagement>
 
+    <modules>
+        <module>../SSuKSSuK-EUREKA</module>
+    </modules>
+
     <build>
         <plugins>
             <plugin>
