--- a/SSuKSSuK-GATEWAY/pom.xml
+++ b/SSuKSSuK-GATEWAY/pom.xml
@@ -3,26 +3,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.ssukssuk</groupId>
+        <artifactId>ssukssuk</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../SSuKSSuK-HUB/pom.xml</relativePath> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ssukssuk</groupId>
-    <artifactId>ssukssuk</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>SSuKSSuK-HUB</name>
+    <artifactId>SSuKSSuK-GATEWAY</artifactId>
+    <name>SSuKSSuK-GATEWAY</name>
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <spring-cloud.version>2020.0.0</spring-cloud.version>
-        <maven.test.skip>true</maven.test.skip>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
 
         <dependency>
@@ -36,23 +32,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <modules>
-        <module>../SSuKSSuK-EUREKA</module>
-        <module>../SSuKSSuK-GATEWAY</module>
-    </modules>
 
     <build>
         <plugins>
