--- a/SSuKSSuK-HUB/pom.xml
+++ b/SSuKSSuK-HUB/pom.xml
@@ -52,6 +52,7 @@
     <modules>
         <module>../SSuKSSuK-EUREKA</module>
         <module>../SSuKSSuK-GATEWAY</module>
+        <module>../SSuKSSuK-UI</module>
     </modules>
 
     <build>
