--- a/SSuKSSuK-HUB/pom.xml
+++ b/SSuKSSuK-HUB/pom.xml
@@ -26,6 +26,21 @@
         </dependency>
 
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+<!--            <scope>provided</scope>-->
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -53,6 +68,10 @@
         <module>../SSuKSSuK-EUREKA</module>
         <module>../SSuKSSuK-GATEWAY</module>
         <module>../SSuKSSuK-UI</module>
+        <module>../SSuKSSuK-WS</module>
+        <module>../SSukSSuk-OOTD</module>
+        <module>../SSuKSSuK-BO</module>
+        <module>../SSuKSSuK-NC</module>
     </modules>
 
     <build>
