ajax 예제 / 로그인 진행중

--- a/SSuKSSuK-UI/app-local.properties
+++ b/SSuKSSuK-UI/app-local.properties
@@ -10,3 +10,9 @@ spring.mvc.view.suffix=.jsp
 
 
 logging.path=./logs
+
+WS.URL=http://127.0.0.1:8001
+BO.URL=http://127.0.0.1:8101
+NC.URL=http://127.0.0.1:8201
+OOTD.URL=http://127.0.0.1:8301
+LOGIN.URL=http://127.0.0.1:8401
