--- a/SSuKSSuK-HUB/pom.xml
+++ b/SSuKSSuK-HUB/pom.xml
@@ -91,7 +91,7 @@
         <module>../SSuKSSuK-GATEWAY</module>
         <module>../SSuKSSuK-UI</module>
         <module>../SSuKSSuK-WS</module>
-        <module>../SSukSSuk-OOTD</module>
+        <module>../SSuKSSuK-OOTD</module>
         <module>../SSuKSSuK-BO</module>
         <module>../SSuKSSuK-NC</module>
         <module>../SSuKSSuK-LOGIN</module>
