LOGIN -> USER 모듈명 변경 / 회원가입 단순 로직 완료 / 로그인 단순 로직 완료

--- a/SSuKSSuK-HUB/pom.xml
+++ b/SSuKSSuK-HUB/pom.xml
@@ -94,7 +94,7 @@
         <module>../SSuKSSuK-OOTD</module>
         <module>../SSuKSSuK-BO</module>
         <module>../SSuKSSuK-NC</module>
-        <module>../SSuKSSuK-LOGIN</module>
+        <module>../SSuKSSuK-USER</module>
     </modules>
 
     <build>
