eureka discovery 로그 레벨 수정 - 무의미한 로그 라인 발생 방지

--- a/SSuKSSuK-UI/app-local.properties
+++ b/SSuKSSuK-UI/app-local.properties
@@ -16,3 +16,5 @@ BO.URL=http://127.0.0.1:8101
 NC.URL=http://127.0.0.1:8201
 OOTD.URL=http://127.0.0.1:8301
 LOGIN.URL=http://127.0.0.1:8401
+
+logging.level.com.netflix.discovery=OFF
