--- a/SSuKSSuK-OOTD/app-local.properties
+++ b/SSuKSSuK-OOTD/app-local.properties
@@ -18,3 +18,5 @@ spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://database-1.cd8xufchowk0.
 spring.datasource.hikari.driver-class-name = net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.hikari.username=admin
 spring.datasource.hikari.password=TnrTnrwkfkwk1!
+
+logging.level.com.netflix.discovery=OFF
