--- a/SSuKSSuK-UI/app-local.properties
+++ b/SSuKSSuK-UI/app-local.properties
@@ -5,7 +5,7 @@ spring.application.name=SSuKSSuK-UI
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 
 
